--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -5,3 +5,5 @@ build-std-features = ["compiler-builtins-mem"]
 target = "x86_64-kaa_os.json"
 [target.'cfg(target_os = "none")']
 runner = "bootimage runner"
+[toolchain]
+channel = "nightly"
